# game-of-life-wasm

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/src/: index.ts
